[gd_scene load_steps=19 format=4 uid="uid://d14rf2r6jt40c"]

[ext_resource type="Script" uid="uid://du5s4ed021c5q" path="res://Main/fases.gd" id="1_0wggj"]
[ext_resource type="Texture2D" uid="uid://b1p1mq7q3kkke" path="res://assets/Forest-TileMap/Tiles/TilesNonSliced.png" id="2_kj22m"]
[ext_resource type="Texture2D" uid="uid://wm4jkqje6lvs" path="res://assets/BG/1.png" id="3_eejjf"]
[ext_resource type="Texture2D" uid="uid://u4unmv7nu24v" path="res://assets/BG/2.png" id="4_3xqal"]
[ext_resource type="Texture2D" uid="uid://cr3yncm61d2nc" path="res://assets/BG/3.png" id="5_62ne1"]
[ext_resource type="Texture2D" uid="uid://c12lyleh8sx4v" path="res://assets/BG/4.png" id="6_b2a8k"]
[ext_resource type="FontFile" uid="uid://bubgfwyi1ka0r" path="res://assets/fonts/Daydream.ttf" id="7_1dev5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ex525"]
texture = ExtResource("2_kj22m")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0

[sub_resource type="TileSet" id="TileSet_ocv48"]
sources/1 = SubResource("TileSetAtlasSource_ex525")

[sub_resource type="Theme" id="Theme_lcibk"]
default_font = ExtResource("7_1dev5")
default_font_size = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xvurx"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bjw38"]
bg_color = Color(1, 0.901961, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2xotk"]
bg_color = Color(0.864824, 0.49368, 0.127393, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_omarm"]
bg_color = Color(0.94281, 0.438388, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t6eu0"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_4vxl8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(400, 234)]
}

[sub_resource type="Animation" id="Animation_lcibk"]
resource_name = "aaa"
length = 2.0
loop_mode = 1
capture_included = true
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0159385, 1.04927, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 2,
"values": [Vector2(400, 165), Vector2(400, 180), Vector2(400, 165)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2xotk"]
_data = {
&"RESET": SubResource("Animation_4vxl8"),
&"aaa": SubResource("Animation_lcibk")
}

[node name="Fases" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_0wggj")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAAABMAAQAAAAAAAAAAABQAAQAAAAEAAAAAABUAAQAAAAEAAAABABMAAQABAAAAAAABABQAAQABAAEAAAABABUAAQABAAEAAAAAABYAAQAAAAIAAAABABYAAQABAAIAAAACABMAAQABAAAAAAACABQAAQABAAEAAAACABUAAQABAAEAAAADABMAAQABAAAAAAADABQAAQABAAEAAAADABUAAQABAAEAAAAEABMAAQABAAAAAAAEABQAAQABAAEAAAAEABUAAQABAAEAAAAFABMAAQABAAAAAAAFABQAAQABAAEAAAAFABUAAQABAAEAAAAGABMAAQABAAAAAAAGABQAAQABAAEAAAAGABUAAQABAAEAAAAHABMAAQABAAAAAAAHABQAAQABAAEAAAAHABUAAQABAAEAAAAIABMAAQABAAAAAAAIABQAAQABAAEAAAAIABUAAQABAAEAAAAJABMAAQABAAAAAAAJABQAAQABAAEAAAAJABUAAQABAAEAAAAKABMAAQABAAAAAAAKABQAAQABAAEAAAAKABUAAQABAAEAAAALABMAAQABAAAAAAALABQAAQABAAEAAAALABUAAQABAAEAAAAMABMAAQABAAAAAAAMABQAAQABAAEAAAAMABUAAQABAAEAAAANABMAAQABAAAAAAANABQAAQABAAEAAAANABUAAQABAAEAAAAOABMAAQABAAAAAAAOABQAAQABAAEAAAAOABUAAQABAAEAAAAPABMAAQABAAAAAAAPABQAAQABAAEAAAAPABUAAQABAAEAAAAQABMAAQABAAAAAAAQABQAAQABAAEAAAAQABUAAQABAAEAAAARABMAAQABAAAAAAARABQAAQABAAEAAAARABUAAQABAAEAAAASABMAAQABAAAAAAASABQAAQABAAEAAAASABUAAQABAAEAAAATABMAAQABAAAAAAATABQAAQABAAEAAAATABUAAQABAAEAAAAUABMAAQABAAAAAAAUABQAAQABAAEAAAAUABUAAQABAAEAAAAVABMAAQABAAAAAAAVABQAAQABAAEAAAAVABUAAQABAAEAAAAWABMAAQABAAAAAAAWABQAAQABAAEAAAAWABUAAQABAAEAAAAXABMAAQABAAAAAAAXABQAAQABAAEAAAAXABUAAQABAAEAAAAYABMAAQABAAAAAAAYABQAAQABAAEAAAAYABUAAQABAAEAAAAZABMAAQABAAAAAAAZABQAAQABAAEAAAAZABUAAQABAAEAAAAaABMAAQABAAAAAAAaABQAAQABAAEAAAAaABUAAQABAAEAAAAbABMAAQABAAAAAAAbABQAAQABAAEAAAAbABUAAQABAAEAAAAcABMAAQABAAAAAAAcABQAAQABAAEAAAAcABUAAQABAAEAAAAdABMAAQABAAAAAAAdABQAAQABAAEAAAAdABUAAQABAAEAAAAeABMAAQABAAAAAAAeABQAAQABAAEAAAAeABUAAQABAAEAAAAfABMAAQABAAAAAAAfABQAAQABAAEAAAAfABUAAQABAAEAAAAgABMAAQABAAAAAAAgABQAAQABAAEAAAAgABUAAQABAAEAAAAhABMAAQABAAAAAAAhABQAAQABAAEAAAAhABUAAQABAAEAAAAiABMAAQABAAAAAAAiABQAAQABAAEAAAAiABUAAQABAAEAAAAjABMAAQABAAAAAAAjABQAAQABAAEAAAAjABUAAQABAAEAAAAkABMAAQABAAAAAAAkABQAAQABAAEAAAAkABUAAQABAAEAAAAlABMAAQABAAAAAAAlABQAAQABAAEAAAAlABUAAQABAAEAAAAmABMAAQABAAAAAAAmABQAAQABAAEAAAAmABUAAQABAAEAAAAnABMAAQACAAAAAAAnABQAAQACAAEAAAAnABUAAQABAAEAAAAmABYAAQABAAIAAAAnABYAAQACAAIAAAACABYAAQABAAIAAAADABYAAQABAAIAAAAEABYAAQABAAIAAAAFABYAAQABAAIAAAAGABYAAQABAAIAAAAHABYAAQABAAIAAAAIABYAAQABAAIAAAAJABYAAQABAAIAAAAKABYAAQABAAIAAAALABYAAQABAAIAAAAMABYAAQABAAIAAAANABYAAQABAAIAAAAOABYAAQABAAIAAAAPABYAAQABAAIAAAAQABYAAQABAAIAAAARABYAAQABAAIAAAASABYAAQABAAIAAAATABYAAQABAAIAAAAUABYAAQABAAIAAAAVABYAAQABAAIAAAAWABYAAQABAAIAAAAXABYAAQABAAIAAAAYABYAAQABAAIAAAAZABYAAQABAAIAAAAaABYAAQABAAIAAAAbABYAAQABAAIAAAAcABYAAQABAAIAAAAdABYAAQABAAIAAAAeABYAAQABAAIAAAAfABYAAQABAAIAAAAgABYAAQABAAIAAAAhABYAAQABAAIAAAAiABYAAQABAAIAAAAjABYAAQABAAIAAAAkABYAAQABAAIAAAAlABYAAQABAAIAAAA=")
tile_set = SubResource("TileSet_ocv48")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -27.0
offset_top = 85.0
offset_right = 1152.0
offset_bottom = 724.0
color = Color(0, 0, 0, 0.627451)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(1, -22)
motion_scale = Vector2(0.6, 1)
motion_mirroring = Vector2(512, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(424.5, 331.5)
scale = Vector2(10.5625, 3.40341)
texture = ExtResource("3_eejjf")

[node name="clouds1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.7, 1)
motion_mirroring = Vector2(558, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/clouds1"]
position = Vector2(-1, 380)
texture = ExtResource("4_3xqal")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/clouds1"]
position = Vector2(79, 380)
texture = ExtResource("4_3xqal")
centered = false

[node name="Sprite2D3" type="Sprite2D" parent="ParallaxBackground/clouds1"]
position = Vector2(159, 380)
texture = ExtResource("4_3xqal")
centered = false

[node name="Sprite2D4" type="Sprite2D" parent="ParallaxBackground/clouds1"]
position = Vector2(239, 380)
texture = ExtResource("4_3xqal")
centered = false

[node name="Sprite2D5" type="Sprite2D" parent="ParallaxBackground/clouds1"]
position = Vector2(319, 380)
texture = ExtResource("4_3xqal")
centered = false

[node name="Sprite2D6" type="Sprite2D" parent="ParallaxBackground/clouds1"]
position = Vector2(397, 380)
texture = ExtResource("4_3xqal")
centered = false

[node name="Sprite2D7" type="Sprite2D" parent="ParallaxBackground/clouds1"]
position = Vector2(477, 380)
texture = ExtResource("4_3xqal")
centered = false

[node name="trees" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.8, 1)
motion_mirroring = Vector2(557, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/trees"]
position = Vector2(-1, 440)
scale = Vector2(1, 0.881)
texture = ExtResource("5_62ne1")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/trees"]
position = Vector2(236, 440)
scale = Vector2(1, 0.881)
texture = ExtResource("5_62ne1")
centered = false

[node name="Sprite2D3" type="Sprite2D" parent="ParallaxBackground/trees"]
position = Vector2(157, 440)
scale = Vector2(1, 0.881)
texture = ExtResource("5_62ne1")
centered = false

[node name="Sprite2D4" type="Sprite2D" parent="ParallaxBackground/trees"]
position = Vector2(78, 440)
scale = Vector2(1, 0.881)
texture = ExtResource("5_62ne1")
centered = false

[node name="Sprite2D5" type="Sprite2D" parent="ParallaxBackground/trees"]
position = Vector2(316, 440)
scale = Vector2(1, 0.881)
texture = ExtResource("5_62ne1")
centered = false

[node name="Sprite2D6" type="Sprite2D" parent="ParallaxBackground/trees"]
position = Vector2(396, 439)
scale = Vector2(1, 0.881)
texture = ExtResource("5_62ne1")
centered = false

[node name="Sprite2D7" type="Sprite2D" parent="ParallaxBackground/trees"]
position = Vector2(476, 440)
scale = Vector2(1, 0.881)
texture = ExtResource("5_62ne1")
centered = false

[node name="grass" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(558, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/grass"]
position = Vector2(41, 538)
texture = ExtResource("6_b2a8k")

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/grass"]
position = Vector2(120, 539)
texture = ExtResource("6_b2a8k")

[node name="Sprite2D3" type="Sprite2D" parent="ParallaxBackground/grass"]
position = Vector2(40, 539)
texture = ExtResource("6_b2a8k")

[node name="Sprite2D4" type="Sprite2D" parent="ParallaxBackground/grass"]
position = Vector2(200, 539)
texture = ExtResource("6_b2a8k")

[node name="Sprite2D5" type="Sprite2D" parent="ParallaxBackground/grass"]
position = Vector2(280, 539)
texture = ExtResource("6_b2a8k")

[node name="Sprite2D6" type="Sprite2D" parent="ParallaxBackground/grass"]
position = Vector2(440, 539)
texture = ExtResource("6_b2a8k")

[node name="Sprite2D7" type="Sprite2D" parent="ParallaxBackground/grass"]
position = Vector2(360, 539)
texture = ExtResource("6_b2a8k")

[node name="Sprite2D8" type="Sprite2D" parent="ParallaxBackground/grass"]
position = Vector2(519, 539)
texture = ExtResource("6_b2a8k")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(520, 383)
zoom = Vector2(1.25, 1.25)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 165.0
offset_right = 1182.0
offset_bottom = 292.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/normal_font = ExtResource("7_1dev5")
theme_override_font_sizes/normal_font_size = 50
text = "FASES
"

[node name="VBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 115.0
offset_top = 367.0
offset_right = 939.0
offset_bottom = 408.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30
metadata/_edit_group_ = true

[node name="Level1" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_lcibk")
theme_override_colors/font_disabled_color = Color(0.205117, 0.205117, 0.205117, 1)
theme_override_colors/font_hover_color = Color(0.976471, 0.576471, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.847059, 0.466667, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("7_1dev5")
theme_override_styles/focus = SubResource("StyleBoxFlat_xvurx")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_bjw38")
theme_override_styles/hover = SubResource("StyleBoxFlat_2xotk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_omarm")
theme_override_styles/normal = SubResource("StyleBoxFlat_t6eu0")
text = "LEVEL  1"
flat = true

[node name="Level2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_lcibk")
theme_override_colors/font_hover_color = Color(0.976471, 0.576471, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.847059, 0.466667, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("7_1dev5")
theme_override_styles/focus = SubResource("StyleBoxFlat_xvurx")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_bjw38")
theme_override_styles/hover = SubResource("StyleBoxFlat_2xotk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_omarm")
theme_override_styles/normal = SubResource("StyleBoxFlat_t6eu0")
text = "LEVEL  2
"
flat = true

[node name="Level3" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_lcibk")
theme_override_colors/font_hover_color = Color(0.976471, 0.576471, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.847059, 0.466667, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("7_1dev5")
theme_override_styles/focus = SubResource("StyleBoxFlat_xvurx")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_bjw38")
theme_override_styles/hover = SubResource("StyleBoxFlat_2xotk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_omarm")
theme_override_styles/normal = SubResource("StyleBoxFlat_t6eu0")
text = "LEVEL  3
"
flat = true

[node name="Level4" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_lcibk")
theme_override_colors/font_hover_color = Color(0.976471, 0.576471, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.847059, 0.466667, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("7_1dev5")
theme_override_styles/focus = SubResource("StyleBoxFlat_xvurx")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_bjw38")
theme_override_styles/hover = SubResource("StyleBoxFlat_2xotk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_omarm")
theme_override_styles/normal = SubResource("StyleBoxFlat_t6eu0")
text = "LEVEL  4
"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2xotk")
}
autoplay = "aaa"

[node name="Voltar" type="Button" parent="."]
layout_mode = 0
offset_left = -12.0
offset_top = 96.0
offset_right = 174.0
offset_bottom = 137.0
theme = SubResource("Theme_lcibk")
theme_override_colors/font_disabled_color = Color(0.205117, 0.205117, 0.205117, 1)
theme_override_colors/font_hover_color = Color(0.976471, 0.576471, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.847059, 0.466667, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("7_1dev5")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxFlat_xvurx")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_bjw38")
theme_override_styles/hover = SubResource("StyleBoxFlat_2xotk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_omarm")
theme_override_styles/normal = SubResource("StyleBoxFlat_t6eu0")
text = "Voltar"
flat = true

[connection signal="pressed" from="VBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Voltar" to="." method="_on_voltar_pressed"]
